--- a/src/views/pages/events/events.njk
+++ b/src/views/pages/events/events.njk
@@ -32,23 +32,25 @@
       <div class="container">
         {% from './_functions.njk' import selector, activeCheck %}
         <section class="row justify-content-center my-5">
+          {{ selector("2020") }}
           {{ selector("2019") }}
           {{ selector("2018") }}
           {{ selector("2013") }}
         </section>
-          <div class="events_post-sagment tabcontent {{ activeCheck('2019') }}" id="20">
+          <div class="events_post-sagment tabcontent {{ activeCheck('2020') }}" id="20">
               <h4 class="sagment-title">2020</h4>
               <div class="row">
                   <div class="col-sm-6">
                       <article class="sabbi-events-item">
-                          <a href="/events/pag" class="sabbi-events-link">
+                          <a href="/events/pag2020" class="sabbi-events-link">
                               <figure class="img-hover-zoom">
                                   <img class="sabbi-events-img img-responsive lab_event"
                                   style=""
-                                      src="assets/img/events/PAG-2019/g2.jpg"
+                                      src="assets/img/events/pag2020/IMG_20200113_151858.jpg"
                                       alt="thompson">
                                   <figcaption class="event_text">
-                                      <h2 class="sabbi-events-title font-md__x " style="color: black;">Plant & Animal Genome Conference
+                                      <h2 class="sabbi-events-title font-md__x" style="color: black;">
+                                        Plant & Animal Genome Conference
                                       </h2>
                                   </figcaption>
                               </figure>
@@ -66,28 +68,28 @@
           <div class="events_post-sagment tabcontent {{ activeCheck('2019') }}" id="19">
               <h4 class="sagment-title">2019</h4>
               <div class="row">
-                  <div class="col-sm-6">
-                      <article class="sabbi-events-item">
-                          <a href="/events/pag" class="sabbi-events-link">
-                              <figure class="img-hover-zoom">
-                                  <img class="sabbi-events-img img-responsive lab_event"
-                                  style=""
-                                      src="assets/img/events/PAG-2019/g2.jpg"
-                                      alt="thompson">
-                                  <figcaption class="event_text">
-                                      <h2 class="sabbi-events-title font-md__x " style="color: black;">Plant & Animal Genome Conference
-                                      </h2>
-                                  </figcaption>
-                              </figure>
-                          </a>
-                          <div class="events-item-meta">
-                              <div class="events-loc"><i class="ion-location"></i><span class="text">500 Hotel Circle N,
-                                      San Diego, CA</span></div>
-                              <div class="events-date"><i class="ion-calendar"></i><span class="text">12<sup>th</sup>
-                                      Jan 2019</span></div>
-                          </div>
-                      </article><!-- /.sabbi-events-item -->
-                  </div>
+                <div class="col-sm-6">
+                    <article class="sabbi-events-item">
+                        <a href="/events/pag" class="sabbi-events-link">
+                            <figure class="img-hover-zoom">
+                                <img class="sabbi-events-img img-responsive lab_event"
+                                style=""
+                                    src="assets/img/events/PAG-2019/g2.jpg"
+                                    alt="thompson">
+                                <figcaption class="event_text">
+                                    <h2 class="sabbi-events-title font-md__x " style="color: black;">Plant & Animal Genome Conference
+                                    </h2>
+                                </figcaption>
+                            </figure>
+                        </a>
+                        <div class="events-item-meta">
+                            <div class="events-loc"><i class="ion-location"></i><span class="text">500 Hotel Circle N,
+                                    San Diego, CA</span></div>
+                            <div class="events-date"><i class="ion-calendar"></i><span class="text">12-16<sup>th</sup>
+                                    Jan 2019</span></div>
+                        </div>
+                    </article><!-- /.sabbi-events-item -->
+                </div>
                   <div class="col-sm-6">
                       <article class="sabbi-events-item">
                           <a href="/events/psc" class="sabbi-events-link">
