--- a/src/views/pages/events/template.njk
+++ b/src/views/pages/events/template.njk
@@ -24,7 +24,24 @@
           </div>
           <div class="row">
             {% for pic in event.media %}
-              <img class="col-12 col-sm-6 col-md-4 my-3 event-thumbnail" src="{{ pic }}">
+              <img class="col-12 col-sm-6 col-md-4 my-3 event-thumbnail" style="cursor: pointer;"
+                data-toggle="modal" data-target="#modal{{ loop.index0 }}" src="{{ pic }}">
+
+              <div class="modal fade" id="modal{{ loop.index0 }}" tabindex="-1">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-body">
+                      <section class="container-fluid">
+                        <div class="row no-gutters">
+                          <div class="col-12">
+                            <img class="img-fluid" src="{{ pic }}"/>
+                          </div>
+                        </div>
+                      </section>
+                    </div>
+                  </div>
+                </div>
+              </div>
             {% endfor %}
           </div>
         </div>
