--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -197,3 +197,11 @@ footer {
     color: $color-primary!important;
   }
 }
+
+.kbl-header-img {
+  object-fit: cover;
+  object-position: center;
+  margin-top: 60px;
+  width: 100%;
+  height: 200px;
+}
