--- a/src/views/pages/events/events.njk
+++ b/src/views/pages/events/events.njk
@@ -7,6 +7,9 @@
   {% from "universal/_navbar.njk" import navbar %}
   {{ navbar("Events") }}
 
+  {% from "components/img-header.njk" import imgHeader %}
+  {{ imgHeader("https://mph.usu.edu/images/admissions.jpg") }}
+
   <!--
   {% from "components/img-header.njk" import imgHeader %}
   {{ imgHeader("Events") }}
@@ -14,19 +17,6 @@
   {% from "components/breadcrumb.njk" import breadcrumb %}
   {{ breadcrumb([ {name: "Home", location: "/"}, {name: "Events", location: ""} ]) }}
 -->
-  <article class="container-fluid kbl-top">
-    <div class="row justify-content-center pt-4">
-      <div class="col-auto">
-        <h1><ion-icon name="megaphone-outline" class="kbl-header-icon"></ion-icon></h1>
-      </div>
-      <div class="col-auto pt-3 header-icon-wrapper">
-        <h1>Events</h1>
-        <h6>
-          What's coming up?
-        </h6>
-      </div>
-    </div>
-  </article>
 
   <section class="sabbi-section stage_events_post">
       <div class="container">
