--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -7,26 +7,13 @@
   {% from "universal/_navbar.njk" import navbar %}
   {{ navbar("News") }}
 
-  <!--
-  {% from "components/img-header.njk" import imgHeader %}
-  {{ imgHeader("News") }}
+<!--
 
   {% from "components/breadcrumb.njk" import breadcrumb %}
   {{ breadcrumb([ {name: "Home", location: "/"}, {name: "News", location: ""} ]) }}
 -->
-  <article class="container-fluid kbl-top">
-    <div class="row justify-content-center pt-4">
-      <div class="col-auto">
-        <h1><ion-icon name="newspaper-outline" class="kbl-header-icon"></ion-icon></h1>
-      </div>
-      <div class="col-auto pt-3 header-icon-wrapper">
-        <h1>News</h1>
-        <h6>
-          See what the KAABiL is up to
-        </h6>
-      </div>
-    </div>
-  </article>
+  {% from "components/img-header.njk" import imgHeader %}
+  {{ imgHeader("https://mph.usu.edu/images/admissions.jpg") }}
 
   <article class="container-fluid pb-5 pt-1 my-5">
     <div class="row">
