--- a/src/views/pages/people/alumni/alumni.njk
+++ b/src/views/pages/people/alumni/alumni.njk
@@ -7,6 +7,9 @@
   {% from "universal/_navbar.njk" import navbar %}
   {{ navbar("People", "Alumni") }}
 
+  {% from "components/img-header.njk" import imgHeader %}
+  {{ imgHeader("https://mph.usu.edu/images/admissions.jpg") }}
+
 <!--
   <header class="sabbi-page-header-classic sabbi-page-header-team page-header-lg">
       <div class="page-header-content conternt-center">
@@ -24,20 +27,6 @@
       </div>
   </div>
 -->
-
-<article class="container-fluid kbl-top">
-  <div class="row justify-content-center pt-4">
-    <div class="col-auto">
-      <h1><ion-icon name="person-remove-outline" class="kbl-header-icon"></ion-icon></h1>
-    </div>
-    <div class="col-auto pt-3 header-icon-wrapper">
-      <h1>Alumni</h1>
-      <h6>
-        Gone, not forgotten
-      </h6>
-    </div>
-  </div>
-</article>
 
 <article class="container mt-3">
 
