--- a/src/views/pages/people/our-team/our-team.njk
+++ b/src/views/pages/people/our-team/our-team.njk
@@ -7,14 +7,10 @@
   {% from "universal/_navbar.njk" import navbar %}
   {{ navbar("People", "Our Team") }}
 
+  {% from "components/img-header.njk" import imgHeader %}
+  {{ imgHeader("https://mph.usu.edu/images/admissions.jpg") }}
+
 <!--
-  <header class="sabbi-page-header-classic sabbi-page-header-team page-header-lg">
-      <div class="page-header-content conternt-center">
-          <div class="header-title-block">
-              <h1 class="page-title">Our Team</h1>
-          </div>
-      </div>
-  </header>
   <div class="auth-breadcrumb-wrap">
       <div class="container">
           <ol class="breadcrumb sabbi-breadcrumb">
@@ -25,20 +21,6 @@
       </div>
   </div>
 -->
-
-  <article class="container-fluid kbl-top">
-    <div class="row justify-content-center pt-4">
-      <div class="col-auto">
-        <h1><ion-icon name="people-circle-outline" class="kbl-header-icon"></ion-icon></h1>
-      </div>
-      <div class="col-auto pt-3 header-icon-wrapper">
-        <h1>Our Team</h1>
-        <h6>
-          The people that keep KAABiL running
-        </h6>
-      </div>
-    </div>
-  </article>
 
   <article class="container">
     {% include "../_new-rakesh.njk" %}
