--- a/src/views/pages/people/people.njk
+++ b/src/views/pages/people/people.njk
@@ -7,6 +7,9 @@
   {% from "universal/_navbar.njk" import navbar %}
   {{ navbar("People") }}
 
+  {% from "components/img-header.njk" import imgHeader %}
+  {{ imgHeader("https://mph.usu.edu/images/admissions.jpg") }}
+
   <!--
   {% from "components/img-header2.njk" import imgHeader2 %}
   {{ imgHeader2("People", "sabbi-page-header-classic sabbi-page-header-team page-header-lg") }}
@@ -14,21 +17,6 @@
   {% from "components/breadcrumb.njk" import breadcrumb %}
   {{ breadcrumb([ {name: "Home", location: "/"}, {name: "People", location: ""} ]) }}
 -->
-
-
-  <article class="container-fluid kbl-top">
-    <div class="row justify-content-center pt-4">
-      <div class="col-auto">
-        <h1><ion-icon name="people-outline" class="kbl-header-icon"></ion-icon></h1>
-      </div>
-      <div class="col-auto pt-3 header-icon-wrapper">
-        <h1>People</h1>
-        <h6>
-          Students and alumni associated with the KAABiL
-        </h6>
-      </div>
-    </div>
-  </article>
 
   <article class="container">
     {% include "./_new-rakesh.njk" %}
