--- a/src/views/pages/publications/conferences/conferences.njk
+++ b/src/views/pages/publications/conferences/conferences.njk
@@ -7,6 +7,9 @@
   {% from "universal/_navbar.njk" import navbar %}
   {{ navbar("Publications", "Conferences") }}
 
+  {% from "components/img-header.njk" import imgHeader %}
+  {{ imgHeader("https://mph.usu.edu/images/admissions.jpg") }}
+
   <!--
   <header class="sabbi-page-header-classic2 sabbi-page-header-team page-header-lg">
           <div class="page-header-content conternt-center">
@@ -25,20 +28,6 @@
     </div>
   </div>
   -->
-
-  <article class="container-fluid kbl-top">
-    <div class="row justify-content-center pt-4">
-      <div class="col-auto">
-        <h1><ion-icon name="calendar-outline" class="kbl-header-icon"></ion-icon></h1>
-      </div>
-      <div class="col-auto pt-3 header-icon-wrapper">
-        <h1>Conferences and Talks</h1>
-        <h6>
-          Presentations by Dr. Kaundal and the team
-        </h6>
-      </div>
-    </div>
-  </article>
 
   <div class="container">
       <section class="ripepage-peak">
