--- a/src/views/pages/research/research-areas/research-areas.njk
+++ b/src/views/pages/research/research-areas/research-areas.njk
@@ -7,6 +7,9 @@
   {% from "universal/_navbar.njk" import navbar %}
   {{ navbar("Research", "Research Articles") }}
 
+  {% from "components/img-header.njk" import imgHeader %}
+  {{ imgHeader("https://mph.usu.edu/images/admissions.jpg") }}
+
   <!--
   <header class="kbl-header research sabbi-page-header page-header-lg">
       <div class="page-header-content conternt-center">
@@ -24,20 +27,6 @@
       </div>
   </div>
 -->
-
-  <article class="container-fluid kbl-top">
-    <div class="row justify-content-center pt-4">
-      <div class="col-auto">
-        <h1><ion-icon name="library-outline" class="kbl-header-icon"></ion-icon></h1>
-      </div>
-      <div class="col-auto pt-3 header-icon-wrapper text-left">
-        <h1>Research Areas</h1>
-        <h6>
-          Results from our lab
-        </h6>
-      </div>
-    </div>
-  </article>
 
   <article class="container mt-5">
     <div class="row justify-content-center">
