--- a/src/views/pages/research/research.njk
+++ b/src/views/pages/research/research.njk
@@ -8,6 +8,9 @@
   {% from "universal/_navbar.njk" import navbar %}
   {{ navbar("Research", "Lab Research") }}
 
+  {% from "components/img-header.njk" import imgHeader %}
+  {{ imgHeader("https://mph.usu.edu/images/admissions.jpg") }}
+
   <!--
   {% from "components/img-header2.njk" import imgHeader2 %}
   {{ imgHeader2("Research", "sabbi-page-header-classic3 sabbi-page-header-team page-header-lg") }}
@@ -15,20 +18,6 @@
   {% from "components/breadcrumb.njk" import breadcrumb %}
   {{ breadcrumb([ {name: "Home", location: "/"}, {name: "Research", location: ""} ]) }}
 -->
-
-  <article class="container-fluid kbl-top">
-    <div class="row justify-content-center pt-4">
-      <div class="col-auto">
-        <h1><ion-icon name="flask-outline" class="kbl-header-icon"></ion-icon></h1>
-      </div>
-      <div class="col-auto pt-3 header-icon-wrapper">
-        <h1>Research</h1>
-        <h6>
-          Everything happening in our lab, and more!
-        </h6>
-      </div>
-    </div>
-  </article>
 
   <main class="sabbi-page-wrap">
       <div class="container">
