--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -104,10 +104,124 @@
 
 {% set pub2013 = [
   {
-    authors: '',
-    content: '',
+    authors: 'Kaundal R, Sahu SS, Verma R, Weirick T.',
+    content: 'Identification and characterization of plastid-type proteins from sequence-attributed features using machine learning.<em> PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3851450 /" class="kbl-link" target="_blank">PMC3851450</a>',
+    doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-14-S14-S7',
+    doiTitle: '10.1186/1471-2105-14-S14-S7'
+  },
+
+  {
+    authors: 'Ahmed F, Kaundal R, Raghava GP.',
+    content: 'PHDcleav: a SVM based method for predicting human Dicer cleavage sites using sequence and secondary structure of miRNA precursors.<em> PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3851333/" class="kbl-link" target="_blank">PMC3851333</a>',
+    doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-14-S14-S9',
+    doiTitle: '10.1186/1471-2105-14-S14-S9'
+  },
+
+  {
+    authors: 'Wren JD, Dozmorov MG, Burian D, Kaundal R, Perkins A, Perkins E, Kupfer DM, Springer GK.',
+    content: 'Proceedings of the 2013 MidSouth Computational Biology and Bioinformatics Society (MCBIOS) Conference.<em> PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3851158/" class="kbl-link" target="_blank">PMC3851158</a>',
+    doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-14-S14-S1',
+    doiTitle: '10.1186/1471-2105-14-S14-S1'
+  }
+]
+%}
+
+{% set pub2012 = [
+
+  {
+    authors: 'Wren JD, Dozmorov MG, Burian D, Kaundal R, Bridges S, Kupfer DM.',
+    content: 'Proceedings of the 2012 MidSouth Computational Biology and Bioinformatics Society (MCBIOS) conference. <em>Introduction.</em> <em>PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3439718/" class="kbl-link" target="_blank">PMC3439718</a>',
+    doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-13-S15-S1',
+    doiTitle: '10.1186/1471-2105-13-S15-S1'
+  }
+
+]
+%}
+
+{% set pub2011 = [
+
+  {
+    authors: 'Lee, J., Kaundal, R., Li, J., Zhao, P.X. and Allen, R. 2011.',
+    content: 'Genome-wide identification of alternative polyadenylation (APA) genes in Arabidopsis and their biological validation <em> (submitted). </em>',
     doiLink: '',
     doiTitle: ''
   }
+]
+%}
+
+{% set pub2010 = [
+  {
+    authors: 'Kaundal, R., Saini, R. and Zhao, P.X. 2010.',
+    content: 'Combining machine learning and homology-based approaches to accurately predict subcellular localization in Arabidopsis. <em>Plant Physiology 154(1):</em> <strong>36-54.</strong><em> PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2938157/" class="kbl-link" target="_blank">PMC2832251</a>',
+    doiLink: 'http://www.plantphysiol.org/content/154/1/36',
+    doiTitle: '10.1104/pp.110.156851'
+  },
+
+  {
+    authors: 'Benedito, V.A., Li, H., Dai, X., Wandrey, M., He, J., Kaundal, R., Torres-Jerez, I., Gomez, S.K., Harrison, M.J., Tang, Y., Zhao, P.X. and Udvardi, M.K. 2010.',
+    content: 'Genomic inventory and transcriptional analysis of Medicago truncatula transporters. <em>Plant Physiology152(3):</em> <strong>1716-1730.</strong> <em>PMCID:</em><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2832251/" class="kbl-link" target="_blank">PMC2832251</a>',
+    doiLink: 'http://www.plantphysiol.org/content/152/3/1716',
+    doiTitle: '10.1104/pp.109.148684'
+  }
+]
+%}
+
+{% set pub2009 = [
+  {
+    authors: 'Kaundal, R. and Raghava, G.P.S. 2009.',
+    content: 'RSLpred: predicting subcellular localization of rice proteins combining compositional and evolutionary information. <em>Proteomics 9(9):</em><strong> 2324-2342.</strong> <em>PMCID:</em><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/pmic.200700597" class="kbl-link" target="_blank">200700597</a>',
+    doiLink: 'https://onlinelibrary.wiley.com/doi/abs/10.1002/pmic.200700597',
+    doiTitle: '10.1002/pmic.200700597'
+  }
+]
+%}
+
+{% set pub2007 = [
+
+ {
+   authors: 'Kapoor, A.S. and Kaundal, R. 2007.',
+   content: 'Development of weather based forewarning systems for rice blast. Himachal Journal of Agricultural Research 33(2): 211-217.',
+   doiLink: '',
+   doiTitle: ''
+ }
+
+]
+%}
+
+{% set pub2006 = [
+
+  {
+    authors: 'Kaundal, R., Kapoor, A.S. and Raghava, G.P.S. 2006.',
+    content: 'Machine learning techniques in disease forecasting: a case study on rice blast prediction. <em>BMC Bioinformatics 7(1):</em> <strong> 485.</strong><em> PMCID:</em> <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1647291/" class="kbl-link" target="_blank">PMC1647291</a>',
+    doiLink: 'https://bmcbioinformatics.biomedcentral.com/articles/10.1186/1471-2105-7-485',
+    doiTitle: '10.1186/1471-2105-7-485'
+  },
+
+  {
+    authors: 'Kaundal, R. and Sharma, B.K. 2006.',
+    content: 'Genotype x environment interaction and stability analysis for yield and other quantitative traits in maize (Zea mays L.) under rainfed and high rainfall valley areas of the sub-montane. Research on Crops 7(1): 171-180.',
+    doiLink: '',
+    doiTitle: ''
+  }
+
+]
+%}
+
+{% set pub2005 = [
+
+  {
+    authors: 'Kaundal, R. and Sharma, B.K. 2005.',
+    content: 'Genetic variability and association studies for different yield components over the environments in elite cultivars of Zea mays L. Himachal Journal of Agricultural Research 31(1): 31-38.',
+    doiLink: '',
+    doiTitle: ''
+  },
+
+  {
+    authors: 'Kaundal, R. and Kapoor, A.S. 2005.',
+    content: 'Virulence pattern of Pyricularia grisea in district Kangra of Himachal Pradesh. Himachal Journal of Agricultural Research 31(2): 170-172.',
+    doiLink: '',
+    doiTitle: ''
+  }
+
 ]
 %}
