--- a/src/views/components/img-header.njk
+++ b/src/views/components/img-header.njk
@@ -1,4 +1,4 @@
-{% macro imgHeader(img="") %}
+{% macro imgHeader(img="/assets/header-img") %}
   <section class="container-fluid px-0">
     <img class="kbl-header-img" src="{{ img }}"/>
   </section>
