--- a/src/views/pages/people/alumni/alumni.njk
+++ b/src/views/pages/people/alumni/alumni.njk
@@ -8,25 +8,7 @@
   {{ navbar("People", "Alumni") }}
 
   {% from "components/img-header.njk" import imgHeader %}
-  {{ imgHeader("https://mph.usu.edu/images/admissions.jpg") }}
-
-<!--
-  <header class="sabbi-page-header-classic sabbi-page-header-team page-header-lg">
-      <div class="page-header-content conternt-center">
-          <div class="header-title-block">
-              <h1 class="page-title">Alumni</h1>
-          </div>
-      </div>
-  </header>
-  <div class="auth-breadcrumb-wrap">
-      <div class="container">
-          <ol class="breadcrumb sabbi-breadcrumb">
-              <li><a href="/">Home</a></li>
-              <li class="active"><a href="#">Alumni</a></li>
-          </ol>
-      </div>
-  </div>
--->
+  {{ imgHeader() }}
 
 <article class="container mt-3">
 
