--- a/src/views/pages/people/our-team/our-team.njk
+++ b/src/views/pages/people/our-team/our-team.njk
@@ -8,19 +8,7 @@
   {{ navbar("People", "Our Team") }}
 
   {% from "components/img-header.njk" import imgHeader %}
-  {{ imgHeader("https://mph.usu.edu/images/admissions.jpg") }}
-
-<!--
-  <div class="auth-breadcrumb-wrap">
-      <div class="container">
-          <ol class="breadcrumb sabbi-breadcrumb">
-              <li><a href="/">Home</a></li>
-              <li><a href="#">People</a></li>
-              <li class="active">Our Team</li>
-          </ol>
-      </div>
-  </div>
--->
+  {{ imgHeader() }}
 
   <article class="container">
     {% include "../_new-rakesh.njk" %}
