--- a/src/views/pages/people/people.njk
+++ b/src/views/pages/people/people.njk
@@ -8,7 +8,7 @@
   {{ navbar("People") }}
 
   {% from "components/img-header.njk" import imgHeader %}
-  {{ imgHeader("https://mph.usu.edu/images/admissions.jpg") }}
+  {{ imgHeader() }}
 
   <!--
   {% from "components/img-header2.njk" import imgHeader2 %}
