--- a/src/views/pages/research/research-areas/articles.njk
+++ b/src/views/pages/research/research-areas/articles.njk
@@ -10,7 +10,7 @@
     title: "Artificial Intelligence",
     subtitle: "OMICS big data to novel biological discoveries",
     img: "/assets/img/AI-processor-LowRes-v1.jpg",
-    link: "ai"
+    link: "/research/ai"
   }
 %}
 
@@ -18,7 +18,7 @@
     title: "Host-pathogen Interactions",
     subtitle: "Understanding mechanisms of infectious diseases",
     img: "/assets/img/HPI_new.gif",
-    link: "hpi"
+    link: "/research/hpi"
   }
 %}
 
@@ -26,7 +26,7 @@
     title: "Protein Function Prediction",
     subtitle: "Annotation of novel proteomes and their features",
     img: "/assets/img/functionalbg_resized.png",
-    link: "pfp"
+    link: "/research/pfp"
   }
 %}
 
@@ -34,7 +34,7 @@
     title: "Metagenomics",
     subtitle: "Bioinformatics solutions for crop improvement",
     img: "/assets/img/meta_new.png",
-    link: "metagenomics"
+    link: "/research/metagenomics"
   }
 %}
 
@@ -42,7 +42,7 @@
     title: "Precision Agriculture",
     subtitle: "Robotics for integrated weed management",
     img: "/assets/img/sabbi-post/p_agr.jpg",
-    link: "precisionag"
+    link: "/research/precisionag"
   }
 %}
 
@@ -50,7 +50,7 @@
     title: "NGS Studies",
     subtitle: "Deciphering and making sense of complex -omics big data",
     img: "/assets/img/datamining-lowres.png",
-    link: "ngs"
+    link: "/research/ngs"
   }
 %}
 
