--- a/src/views/pages/research/research-areas/research-areas.njk
+++ b/src/views/pages/research/research-areas/research-areas.njk
@@ -8,7 +8,7 @@
   {{ navbar("Research", "Research Articles") }}
 
   {% from "components/img-header.njk" import imgHeader %}
-  {{ imgHeader("https://mph.usu.edu/images/admissions.jpg") }}
+  {{ imgHeader() }}
 
   <!--
   <header class="kbl-header research sabbi-page-header page-header-lg">
