--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -200,8 +200,8 @@ footer {
 
 .kbl-header-img {
   object-fit: cover;
-  object-position: center;
+  object-position: center 30%;
   margin-top: 60px;
   width: 100%;
-  height: 200px;
+  height: 270px;
 }
