--- a/src/views/pages/contact/contact.njk
+++ b/src/views/pages/contact/contact.njk
@@ -7,26 +7,8 @@
   {% from "universal/_navbar.njk" import navbar %}
   {{ navbar("Contact") }}
 
-  <!--
   {% from "components/img-header.njk" import imgHeader %}
-  {{ imgHeader("Contact") }}
-
-  {% from "components/breadcrumb.njk" import breadcrumb %}
-  {{ breadcrumb([ {name: "Home", location: "/"}, {name: "Contact", location: ""} ]) }}-->
-
-  <article class="container-fluid kbl-top">
-    <div class="row justify-content-center pt-4">
-      <div class="col-auto">
-        <h1><ion-icon name="call-outline" class="kbl-header-icon"></ion-icon></h1>
-      </div>
-      <div class="col-auto pt-3 header-icon-wrapper">
-        <h1>Contact Us!</h1>
-        <h6>
-          See what we're about and give us a call!
-        </h6>
-      </div>
-    </div>
-  </article>
+  {{ imgHeader() }}
 
   <article class="container mt-5">
     <section class="row">
