--- a/src/views/pages/events/events.njk
+++ b/src/views/pages/events/events.njk
@@ -8,15 +8,7 @@
   {{ navbar("Events") }}
 
   {% from "components/img-header.njk" import imgHeader %}
-  {{ imgHeader("https://mph.usu.edu/images/admissions.jpg") }}
-
-  <!--
-  {% from "components/img-header.njk" import imgHeader %}
-  {{ imgHeader("Events") }}
-
-  {% from "components/breadcrumb.njk" import breadcrumb %}
-  {{ breadcrumb([ {name: "Home", location: "/"}, {name: "Events", location: ""} ]) }}
--->
+  {{ imgHeader() }}
 
   <section class="sabbi-section stage_events_post">
       <div class="container">
