--- a/src/views/pages/publications/conferences/conferences.njk
+++ b/src/views/pages/publications/conferences/conferences.njk
@@ -8,26 +8,7 @@
   {{ navbar("Publications", "Conferences") }}
 
   {% from "components/img-header.njk" import imgHeader %}
-  {{ imgHeader("https://mph.usu.edu/images/admissions.jpg") }}
-
-  <!--
-  <header class="sabbi-page-header-classic2 sabbi-page-header-team page-header-lg">
-          <div class="page-header-content conternt-center">
-              <div class="header-title-block">
-                  <h1 class="page-title">Conferences and Talks</h1>
-              </div>
-          </div>
-  </header>
-  <div class="auth-breadcrumb-wrap">
-    <div class="container">
-      <ol class="breadcrumb sabbi-breadcrumb">
-        <li><a href="/">Home</a></li>
-        <li><a href="#">Publications</a></li>
-        <li class="active">Conferences and Talks</li>
-      </ol>
-    </div>
-  </div>
-  -->
+  {{ imgHeader() }}
 
   <div class="container">
       <section class="ripepage-peak">
