--- a/src/views/pages/research/research.njk
+++ b/src/views/pages/research/research.njk
@@ -9,7 +9,7 @@
   {{ navbar("Research", "Lab Research") }}
 
   {% from "components/img-header.njk" import imgHeader %}
-  {{ imgHeader("https://mph.usu.edu/images/admissions.jpg") }}
+  {{ imgHeader() }}
 
   <!--
   {% from "components/img-header2.njk" import imgHeader2 %}
