--- a/src/scss/_export-components.scss
+++ b/src/scss/_export-components.scss
@@ -2,3 +2,4 @@
 @import './components/carousel';
 @import './components/research-card';
 @import './components/multi-carousel';
+@import './components/conf-card';
