More responsive home page

--- a/src/views/pages/home/paper.njk
+++ b/src/views/pages/home/paper.njk
@@ -1,6 +1,6 @@
 <div class="container py-4">
-  <div class="row">
-      <div class="col-sm-4 pt-5">
+  <div class="row justify-content-center">
+      <div class="col-12 col-md-10 col-lg-4 pt-5">
         <h5 class="kbl-heading pb-3">About the KAABiL Research Group</h5>
         <p class="kbl-text">
           The Utah State University Bioinformatics Lab is led by <b>Dr. Rakesh Kaundal.</b>
@@ -25,7 +25,7 @@
         </ul>
         <a href="/research/lab-research" class="kbl-link thicc">View all publications</a>
       </div>
-      <aside class="col-sm-8">
+      <aside class="col-12 col-lg-8">
           <div class="paper_cut">
               <div class="pub-item with-icon">
                   <div class="elem-wrapper">
