--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -16,8 +16,8 @@
         {% include "./_multi-carousel-new.njk" %}
       </section>
 
-      <section class="row mt-5">
-        <div class="col-4">
+      <section class="row mt-5 justify-content-center">
+        <section class="col-12 col-md-6 col-lg-4 mb-3 mb-lg-0">
           <div class="h-100 gray-bg py-3 px-4 flex-col">
             <h5 class="kbl-heading pb-2">Latest News:</h5>
 
@@ -40,29 +40,9 @@
               <a class="kbl-link dull" href="/news">View All</a>
             </h6>
           </div>
-        </div>
+        </section>
 
-        <div class="col-4">
-          <div class="h-100 gray-bg">
-            <section class="mb-3">
-              <a class="video-play" href="https://www.youtube.com/watch?v=r-Ay28WKFLY" data-toggle="modal" data-target="#videoModal">
-                <img src="assets/img/rs_usu_winter.jpg" alt="" class="img-fluid">
-              </a>
-            </section>
-            <div class="modal fade" id="videoModal" tabindex="-1">
-              {% include "./video-modal.njk" %}
-            </div>
-            <section class="px-4">
-              <div class="kbl-heading text-center remarkable">Dr. Kaundal's Remarkable Journey</div>
-              <p class="kbl-text text-center">
-                Our research has appeared in high-impact journals including <i>Briefings in Bioinformatics</i>,
-                <i>Plant Physiology</i>, <i>Proteomics</i>, <i>AoB Plants</i>, and many more
-              </p>
-            </section>
-          </div>
-        </div>
-
-        <div class="col-4">
+        <section class="col-12 col-md-6 col-lg-4 mb-3 mb-lg-0 d-lg-none">
           <div class="h-100 gray-bg py-3 px-4 flex-col">
             <h5 class="kbl-heading pb-2">Latest Events:</h5>
 
@@ -90,7 +70,57 @@
               <a class="kbl-link dull" href="/events">View All</a>
             </h6>
           </div>
-        </div>
+        </section>
+
+        <section class="col-12 col-sm-8 col-md-6 col-lg-4 mb-3 mb-lg-0">
+          <div class="h-100 gray-bg">
+            <section class="mb-3">
+              <a class="video-play" href="https://www.youtube.com/watch?v=r-Ay28WKFLY" data-toggle="modal" data-target="#videoModal">
+                <img src="assets/img/rs_usu_winter.jpg" alt="" class="img-fluid">
+              </a>
+            </section>
+            <div class="modal fade" id="videoModal" tabindex="-1">
+              {% include "./video-modal.njk" %}
+            </div>
+            <section class="px-4">
+              <div class="kbl-heading text-center remarkable">Dr. Kaundal's Remarkable Journey</div>
+              <p class="kbl-text text-center">
+                Our research has appeared in high-impact journals including <i>Briefings in Bioinformatics</i>,
+                <i>Plant Physiology</i>, <i>Proteomics</i>, <i>AoB Plants</i>, and many more
+              </p>
+            </section>
+          </div>
+        </section>
+
+        <section class="col-12 col-md-10 col-lg-4 mb-3 mb-lg-0 d-none d-lg-block">
+          <div class="h-100 gray-bg py-3 px-4 flex-col">
+            <h5 class="kbl-heading pb-2">Latest Events:</h5>
+
+            <section class="home-news-item py-2">
+              <a class="hn-header" href="/events/winter">Utah State University Winter</a>
+              <div class="hn-date">December 1, 2019</div>
+            </section>
+
+            <section class="home-news-item py-2">
+              <a class="hn-header" href="/events/cricket">Cricket in Utah</a>
+              <div class="hn-date">July 13, 2019</div>
+            </section>
+
+            <section class="home-news-item py-2">
+              <a class="hn-header" href="/events/psc">PSC Showcase</a>
+              <div class="hn-date">March 23, 2019</div>
+            </section>
+
+            <section class="home-news-item py-2">
+              <a class="hn-header" href="/pag">Plant Animal Genome Conference</a>
+              <div class="hn-date">Jan 12, 2019</div>
+            </section>
+
+            <h6 class="kbl-heading pt-3 mt-auto">
+              <a class="kbl-link dull" href="/events">View All</a>
+            </h6>
+          </div>
+        </section>
       </section>
     </article>
 
