--- a/src/views/pages/home/the-team.njk
+++ b/src/views/pages/home/the-team.njk
@@ -1,7 +1,7 @@
 <section class="sabbi-section section-meet_the_team">
     <div class="container">
-        <div class="row mb_30">
-            <div class="col-sm-4">
+        <div class="row mb_30 justify-content-center">
+            <div class="col-10 col-sm-9 col-md-6 col-lg-5 col-xl-4">
                 <article class="sabbi-thumlinepost-card solitude-bg__x">
                     <figure class="sabbi-thumlinepost-card-figure">
                         <img alt="" class="img-responsive img-thumpost" style="width: 557px; height: 360px;" src="assets/img/profile/RK_2.jpg">
@@ -27,7 +27,7 @@
                     </div>
                 </article>
             </div>
-            <div class="col-sm-6 col-sm-offset-1">
+            <div class="col-md d-none d-md-block">
                 <div class="education_timeline_wrap">
                     <ol class="ol-timeline ">
                         <li class="tl-item with-icon zoom">
@@ -70,17 +70,17 @@
             </div>
         </div>
         {% from "components/person-card.njk" import personCard %}
-        <div class="row">
-            <div class="col-md-3 col-sm-6">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-4 col-sm-6 col-lg-3">
               {{ personCard("assets/img/profile/2.jpg", "Rousselene B. Larson", "Bioinformatics Scientist") }}
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-12 col-md-4 col-sm-6 col-lg-3">
               {{ personCard("assets/img/profile/Kaige Zhang.jpg", "Kaige Zhang", "Research Assistant, PhD") }}
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-12 col-md-4 col-sm-6 col-lg-3">
               {{ personCard("assets/img/profile/loaiza orduz-cristian.jpg", "Cristian D. Loaiza", "MS Student | PSC") }}
             </div>
-            <div class="col-md-3 col-sm-6">
+            <div class="col-12 col-md-4 col-sm-6 col-lg-3">
               {{ personCard("assets/img/profile/1.jpg", "Naveen Duhan", "PhD Student | PSC") }}
             </div>
         </div>
