--- a/src/views/universal/_footer.njk
+++ b/src/views/universal/_footer.njk
@@ -1,7 +1,7 @@
 <footer class="w-100 py-5 mt-5">
   <div class="container">
     <div class="row">
-      <section class="col-4 footer-section">
+      <section class="col-10 col-sm-6 col-md-4 footer-section">
         <div class="row">
           <div class="col-10">
             <a href="/">
@@ -21,7 +21,7 @@
         <div class="kbl-text">Email: rkaundal@usu.edu</div>
       </section>
 
-      <section class="col pt-3">
+      <section class="col-10 col-sm-6 col-md pt-3">
         <h5 class="kbl-heading pb-3">Affiliations</h5>
         <div class="my-2">
           <a href="https://psc.usu.edu/" target="_blank" rel="noopen noreferrer" class="footer-link">
@@ -62,7 +62,7 @@
         </div>
       </section>
 
-      <section class="col pt-3">
+      <section class="col-10 col-sm-6 col-md pt-3">
         <h5 class="kbl-heading pb-3">Publications</h5>
         <div class="my-2">
           <a href="publications" target="_blank" rel="noopen noreferrer" class="footer-link">
@@ -76,7 +76,7 @@
         </div>
       </section>
 
-      <section class="col-4 pt-3 footer-section">
+      <section class="col-10 col-sm-6 col-md-4 pt-3 footer-section">
         <h5 class="kbl-heading pb-3">Latest Events</h5>
 
         <div class="my-3">
@@ -112,10 +112,10 @@
 
 <section class="container my-3">
   <div class="row">
-    <div class="col-6 footer-bottom-text">
+    <div class="col-12 col-sm-6 col-md-6 footer-bottom-text text-center text-sm-left">
       <span class="kbl-text">Copyright 2020 - </span><a href="/" class="kbl-link">KAABiL Lab</a>
     </div>
-    <div class="col-6 text-right footer-bottom-text">
+    <div class="col-12 col-sm-6 col-md-6 text-center text-sm-right footer-bottom-text">
       <span class="kbl-text">Developed and managed by </span><a href="people/our-team" class="kbl-link">Kaundal Research Group</a>
     </div>
   </div>
