--- a/src/views/pages/publications/conferences/dates/17-19.njk
+++ b/src/views/pages/publications/conferences/dates/17-19.njk
@@ -96,13 +96,99 @@
 {% set pub2018 = [
 
   {
-    authors: '',
-    location: '',
-    desc: '',
-    year: '',
-    date: '',
+    authors: '<i><u>Loaiza C.D.</u></i> and <b>Kaundal R<sup>*</sup>.</b>',
+    location: 'The 16th Annual Rocky Mountain Bioinformatics Conference; Viceroy Hotel, Aspen/Snowmass (CO), USA',
+    desc: 'PredHPI: an integrated web-server platform for the prediction and visualization of host-pathogen interactions.',
+    year: '2018',
+    date: 'Dec 6-8',
+    type: ['Oral', 'Poster']
+  },
+
+  {
+    authors: 'Mohammadi M<sup>$</sup>., Smith E<sup>$^</sup>., Stanghellini M. and <b>Kaundal R<sup>*</sup>.</b>',
+    location: 'The XVth MidSouth Computational Biology & Bioinformatics Society (MCBIOS) Annual Conference; Mississippi State University, Starkville (MS), USA',
+    desc: 'Complete genome sequence of Pythium brassicum P1, an oomycete root pathogen: insights into its host specificity to Brassicaceae.',
+    year: '2018',
+    date: 'March 29-31',
+    type: ['Invited']
+  },
+
+  {
+    authors: '<i>Sahu S.S</i>, <i><u>Loaiza C.D.</u></i> and <b>Kaundal R<sup>*</sup>.</b>',
+    location: 'The XVth MidSouth Computational Biology & Bioinformatics Society (MCBIOS) annual conference; Mississippi State University, Starkville (MS), USA',
+    desc: 'Plant-mSubP: a computational framework for the prediction of single and multi-location protein subcellular localization using integrated machine learning approaches',
+    year: '2018',
+    date: 'March 29-31',
     type: []
+  },
+
+  {
+    authors: '<i>Sahu S.S</i>, <i><u>Loaiza C.D.</u></i> and <b>Kaundal R<sup>*</sup>.</b>',
+    location: 'Plants, Soils, and Climate Student Showcase; College of Agriculture and Applied Sciences (CAAS); Utah State University, Logan (UT), USA',
+    desc: 'Plant-mSubP: a computational framework for the prediction of single and multi-location protein subcellular localization using integrated machine learning approaches',
+    year: '2018',
+    date: 'March 19',
+    type: []
+  },
+
+  {
+    authors: 'Batz T.,<b> Kaundal R.</b>, Mellano V. and Sharma,',
+    location: 'The 99th Annual Pacific Division meeting of AAAS (American Association for the Advancement of Science); California State Polytechnic University, Pomona (CA), USA',
+    desc: 'Molecular and Morphological Analysis of the Floral Transition in Aquilegia coerulea.',
+    year: '2018',
+    date: 'Jun 12-15',
+    type: []
+  },
+
+  {
+    authors: 'Moley L.A.<sup>^</sup> , <i>Jones R.</i>, <b>Kaundal R.<sup>*</sup></b>, Thomas, A.J., Benninghoff, A.D. and Isom, C.',
+    location: 'The 51 st Annual Meeting of the Society for the Study of Reproduction (SSR); Hilton New Orleans Riverside, New Orleans (LA), USA',
+    desc: 'RNA-Seq analysis of porcine SCNT blastocysts with high and low incidence of apoptosis.',
+    year: '2018',
+    date: 'Jan 10-13',
+    type: []
+  },
+
+  {
+    authors: 'Moley L.A.<sup>^</sup> , <i>Jones R.</i>, <b>Kaundal R.<sup>*</sup></b>, Thomas, A.J., Benninghoff, A.D. and Isom, C.',
+    location: 'The 7th Annual ADVS Student Research Symposium; Utah State University, Logan (UT), USA',
+    desc: 'Gene expression analysis and DNA methylation patterns of porcine SCNT blastocysts with high and low incidence of apoptosis.',
+    year: '2018',
+    date: 'Aug 8',
+    type: ['Oral']
+  },
+
+  {
+    authors: 'Sandhu D., Cornacchione M.V., Pudussery M., Kaundal A., <b> Kaundal R.</b>, Ferreira J.F.S. and Suarez
+            D.L.',
+    location: 'Punjab Agricultural University (PAU), Ludhiana (Punjab), India.',
+    desc: 'Genetic analysis of salinity responses in Medicago genotypes.',
+    year: '2018',
+    date: 'Jan 15',
+    type: ['Invited']
   }
 
+]
+%}
+
+{% set pub2017 = [
+  {
+    authors: 'Sandhu D., Pudussery M., <b>Kaundal R.</b> and Suarez D.L.',
+    location: 'The ASA, CSSA & SSSA International Annual Meetings; Tampa (Florida), USA',
+    desc: 'Molecular analysis of the Na+/H+ exchanger gene family and its role in salt stress in Medicago truncatula.',
+    year: '2017',
+    date: 'Oct 22-25',
+    type: []
+  },
+
+  {
+    authors: 'Kupsco A., Leet J.K., Altomare D., Chen A., Stapleton H.M., Katiyar N.,<b> Kaundal R.</b>, Yu Y., Wang
+            Y. and Volz D.C.',
+    location: '56th Annual Meeting and ToxExpo, Society of Toxicology; Baltimore (Maryland), USA',
+    desc: 'Transcriptome and DNA Methylome profiling of early Zebrafish embryos exposed to Tris (1,3-dichloro-2-propyl) phosphate.',
+    year: '2017',
+    date: 'Mar 12-16',
+    type: []
+  }
 ]
 %}
