--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -24,6 +24,8 @@ $color-border-gray: #d1d1d1;
 
 $color-bg-gray: #f2f2f2;
 
+$color-bg-main: #f7f7f7;
+
 $transparent: rgba(#fff, 0);
 $color-text-hard: #212121;
 $color-text-main: #2a2a2a;
