--- a/src/views/components/conf-card.njk
+++ b/src/views/components/conf-card.njk
@@ -1,7 +1,9 @@
 {% macro confCard(conference) %}
   <section class="kbl-conf-card my-3">
     <div class="row no-gutters">
-      <div class="col-auto">
+      <div class="col-auto position-relative">
+        <div class="year-banner">{{ conference.year }}</div>
+        <div class="year-banner date">{{ conference.date }}</div>
         <img class="conf-card-img" src="/assets/img/conf.jpg"/>
       </div>
       <div class="col p-4">
