--- a/src/views/components/research-carousel-card.njk
+++ b/src/views/components/research-carousel-card.njk
@@ -2,7 +2,7 @@
   <article class="kbl-research-card-container mx-auto">
     <div class="kbl-research-card pb-3">
       <section class="img-wrapper mb-2">
-        <img src="{{ researchItem.img }}">
+        <img src="{{ RaikouServer }}{{ researchItem.img }}">
       </section>
       <section class="px-3 flex-text-wrapper h-100">
         <div class="card-title mb-3">{{ researchItem.heading }}</div>
