--- a/src/views/pages/home/_research-data.njk
+++ b/src/views/pages/home/_research-data.njk
@@ -1,7 +1,7 @@
 {% set ai = {
     heading: "Artificial Intelligence: OMICS bigdata to novel biological discoveries",
     desc: "Computational modeling through pattern recognition, develop novel algorithms and...",
-    img: "/assets/img/AI-processor-LowRes-v1.jpg",
+    img: "/image/raw/bioinfo/AI-processor-LowRes-v1.jpg",
     link: ""
   }
 %}
@@ -9,7 +9,7 @@
 {% set pa = {
     heading: "Precision Agriculture: Robotics for integrated weed management (IWM)",
     desc: "Incorporate sensing technology for precise IWM, minimize damage to crop, environment...",
-    img: "/assets/img/sabbi-post/p_agr.jpg",
+    img: "/image/raw/bioinfo/sabbi-post/p_agr.jpg",
     link: ""
   }
 %}
@@ -25,7 +25,7 @@
 {% set hpi = {
     heading: "Host-pathogen interactions: Understanding mechanisms of infectious diseases",
     desc: "Explore cross-kingdom threats and identify novel therapeutic candidates...",
-    img: "/assets/img/HPI_new.gif",
+    img: "/image/raw/bioinfo/HPI_new.gif",
     link: ""
   }
 %}
@@ -33,7 +33,7 @@
 {% set metagenomics = {
     heading: "Metagenomics: Bioinformatics solutions for crop improvement",
     desc: "Investigate diversity of enzymes in soil metagenomes and develop advanced tools...",
-    img: "/assets/img/meta_new.png",
+    img: "/image/raw/bioinfo/meta_new.png",
     link: ""
   }
 %}
@@ -41,7 +41,7 @@
 {% set pfp = {
     heading: "Protein function prediction: Annotation of novel proteomes",
     desc: "Identify novel protein features, train in an AI framework, implement as web servers...",
-    img: "/assets/img/functionalbg_resized.png",
+    img: "/image/raw/bioinfo/functionalbg_resized.png?w=271&h=211",
     link: ""
   }
 %}
@@ -49,7 +49,7 @@
 {% set ngs = {
     heading: "NGS studies: Deciphering and making sense of the complex -omics bigdata",
     desc: "Identification of novel expressed genes from transcriptomics studies, methylation patterns...and more text",
-    img: "/assets/img/datamining-lowres.png",
+    img: "/image/raw/bioinfo/datamining-lowres.png",
     link: ""
   }
 %}
