--- a/src/views/pages/home/the-team.njk
+++ b/src/views/pages/home/the-team.njk
@@ -72,16 +72,16 @@
         {% from "components/person-card.njk" import personCard %}
         <div class="row justify-content-center">
             <div class="col-12 col-md-4 col-sm-6 col-lg-3">
-              {{ personCard("assets/img/profile/2.jpg", "Rousselene B. Larson", "Bioinformatics Scientist") }}
+              {{ personCard("/image/raw/bioinfo/profile/2.jpg", "Rousselene B. Larson", "Bioinformatics Scientist") }}
             </div>
             <div class="col-12 col-md-4 col-sm-6 col-lg-3">
-              {{ personCard("assets/img/profile/Kaige Zhang.jpg", "Kaige Zhang", "Research Assistant, PhD") }}
+              {{ personCard("/image/raw/bioinfo/profile/Kaige Zhang.jpg", "Kaige Zhang", "Research Assistant, PhD") }}
             </div>
             <div class="col-12 col-md-4 col-sm-6 col-lg-3">
-              {{ personCard("assets/img/profile/loaiza orduz-cristian.jpg", "Cristian D. Loaiza", "MS Student | PSC") }}
+              {{ personCard("/image/raw/bioinfo/profile/loaiza orduz-cristian.jpg", "Cristian D. Loaiza", "MS Student | PSC") }}
             </div>
             <div class="col-12 col-md-4 col-sm-6 col-lg-3">
-              {{ personCard("assets/img/profile/1.jpg", "Naveen Duhan", "PhD Student | PSC") }}
+              {{ personCard("/image/raw/bioinfo/profile/1.jpg", "Naveen Duhan", "PhD Student | PSC") }}
             </div>
         </div>
         <div class="action-wrap text-left-sm">
