--- a/src/views/pages/people/_people.scss
+++ b/src/views/pages/people/_people.scss
@@ -36,3 +36,18 @@
     font-weight: $font-weight-medium;
   }
 }
+
+.appt-date {
+  font-size: 120%;
+  font-weight: $font-weight-medium;
+}
+
+.appt-desc {
+  font-size: 100%;
+  font-weight: $font-weight-medium;
+}
+
+.award-desc {
+  font-weight: $font-weight-medium;
+  font-size: 95%;
+}
