--- a/src/views/pages/people/_rakesh.njk
+++ b/src/views/pages/people/_rakesh.njk
@@ -4,7 +4,8 @@
                 <div class="profile-card profile-card-meta_classic">
                     <a href="/people/rakesh">
                     <figure>
-                        <img class="img-responsive" style="width: 210px; height:210px" src="assets/img/profile/RK_2.jpg" alt="sabbi-profile-pic">
+                        <img class="img-responsive" style="width: 210px; height:210px"
+                          src="{{ RaikouServer }}/image/aspect/profile/RK_2.jpg">
                         <figcaption>
                             <h3 class="fig-title">Contact Information</h3>
                             <div class="fig-meta">
