--- a/src/views/components/person-card.njk
+++ b/src/views/components/person-card.njk
@@ -2,7 +2,7 @@
   <div class="kbl-person-card-container mx-auto">
     <div class="kbl-person-card">
       <figure>
-        <img class="w-100 mb-2" style="height: 250px;" src="{{ img }}">
+        <img class="w-100 mb-2" style="height: 250px;" src="{{  RaikouServer }}{{ img }}">
         <figcaption class="pb-2">
           <div clas="title-wrapper">
             <div class="card-title px-3 mb-0">{{ name }}</div>
@@ -18,7 +18,7 @@
   <div class="kbl-person-card-container">
     <div class="kbl-person-card select text-left" data-toggle="modal" data-target="#{{ person.modifier }}Modal">
       <figure>
-        <img class="w-100 mb-2" style="height: 250px;" src="{{ person.img }}">
+        <img class="w-100 mb-2" style="height: 250px;" src="{{ RaikouServer }}{{ person.img }}">
         <figcaption class="pb-2 text-left px-3">
           <div class="title-wrapper">
             <div class="card-title mb-0">{{ person.name }}</div>
@@ -50,7 +50,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-4">
-                <img class="w-100 mb-2 modal-img" style="height: 250px;" src="{{ person.img }}">
+                <img class="w-100 mb-2 modal-img" style="height: 250px;" src="{{ RaikouServer }}{{ person.img }}">
               </div>
               <p class="col-8 text-left">
                 {{ person.bio }}
